[package]
edition = "2018"
name = "v85xxp-pac"
version = "0.1.0"
authors = ["Dmitry Trofimov <siberianrednecks@gmail.com>"]
description = "Device support crate for V85XXP devices"
readme = "README.md"
license = "MIT/Apache-2.0"


[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }
critical-section = { version = "1.1", optional = true }
vcell = "0.1.3"

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]